--- a/style.css
+++ b/style.css
@@ -13,26 +13,63 @@ body {
     font-family: 'Montserrat', sans-serif;
     color:black;
 }
-h1 {
+.welcome{
     margin: 0px;
     padding: 0px;
     font-size: 120px;
-    font-weight: 100;
+    color:white;
+    font-weight: 700;
     text-align: center;
     padding: 2em 0px;
     font-size: 10vmin;
     line-height: 1.1;
     max-inline-size: 15ch;
     margin: auto;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191,
+        1px 10px 1px #919191,
+    1px 18px 6px rgba(16,16,16,0.4),
+    1px 22px 10px rgba(16,16,16,0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
 }
-#hello{
-    color: black; 
-    font-family: 'Orienta', sans-serif; 
-    font-size: 40px; 
-    line-height: 24px; 
-    margin: 0 0 24px; 
+h1 {
+    margin: 0px;
+    padding: 0px;
+    font-size: 120px;
+    color:white;
+    font-weight: 700;
     text-align: center;
+    padding: 2em 0px;
+    font-size: 10vmin;
+    line-height: 1.1;
+    max-inline-size: 15ch;
+    margin: auto;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191,
+        1px 10px 1px #919191,
+    1px 18px 6px rgba(16,16,16,0.4),
+    1px 22px 10px rgba(16,16,16,0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
 }
+    
 #aboutme {
     color: black; 
     font-family: "Great Vibes", cursive; 
@@ -53,8 +90,8 @@ h1 {
   }
   
 #aboutme a:hover,#aboutme a:active {
-    background-color: #696969;
-    color: black;
+    background-color: black;
+    color: white;
   }
 nav {
     width: 100%;
@@ -156,7 +193,430 @@ nav ul li a:hover, nav ul li a:active {
     font-weight: 700;
     src: local('Lato Bold'), local('Lato-Bold'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/wkfQbvfT_02e2IWO3yYueQ.woff) format('woff');
 }
-
+.particle {
+    position: absolute;
+    border-radius: 50%;
+}
+@keyframes particle-animation-1 {
+    100% {
+        transform: translate3d(30vw, 12vh, 54px);
+   }
+}
+.particle:nth-child(1) {
+    animation: particle-animation-1 60s infinite;
+    opacity: 0.49;
+    height: 6px;
+    width: 6px;
+    animation-delay: -0.2s;
+    transform: translate3d(23vw, 90vh, 25px);
+    background: #50d926;
+}
+@keyframes particle-animation-2 {
+    100% {
+        transform: translate3d(21vw, 84vh, 10px);
+   }
+}
+.particle:nth-child(2) {
+    animation: particle-animation-2 60s infinite;
+    opacity: 0.81;
+    height: 6px;
+    width: 6px;
+    animation-delay: -0.4s;
+    transform: translate3d(31vw, 81vh, 19px);
+    background: #263ed9;
+}
+@keyframes particle-animation-3 {
+    100% {
+        transform: translate3d(10vw, 62vh, 18px);
+   }
+}
+.particle:nth-child(3) {
+    animation: particle-animation-3 60s infinite;
+    opacity: 0.71;
+    height: 8px;
+    width: 8px;
+    animation-delay: -0.6s;
+    transform: translate3d(66vw, 25vh, 26px);
+    background: #26d965;
+}
+@keyframes particle-animation-4 {
+    100% {
+        transform: translate3d(79vw, 89vh, 48px);
+   }
+}
+.particle:nth-child(4) {
+    animation: particle-animation-4 60s infinite;
+    opacity: 0.89;
+    height: 6px;
+    width: 6px;
+    animation-delay: -0.8s;
+    transform: translate3d(44vw, 50vh, 3px);
+    background: #269ad9;
+}
+@keyframes particle-animation-5 {
+    100% {
+        transform: translate3d(17vw, 46vh, 57px);
+   }
+}
+.particle:nth-child(5) {
+    animation: particle-animation-5 60s infinite;
+    opacity: 0.53;
+    height: 6px;
+    width: 6px;
+    animation-delay: -1s;
+    transform: translate3d(30vw, 50vh, 39px);
+    background: #56d926;
+}
+@keyframes particle-animation-6 {
+    100% {
+        transform: translate3d(69vw, 67vh, 47px);
+   }
+}
+.particle:nth-child(6) {
+    animation: particle-animation-6 60s infinite;
+    opacity: 0.41;
+    height: 8px;
+    width: 8px;
+    animation-delay: -1.2s;
+    transform: translate3d(12vw, 48vh, 83px);
+    background: #26d94a;
+}
+@keyframes particle-animation-7 {
+    100% {
+        transform: translate3d(51vw, 39vh, 39px);
+   }
+}
+.particle:nth-child(7) {
+    animation: particle-animation-7 60s infinite;
+    opacity: 0.79;
+    height: 9px;
+    width: 9px;
+    animation-delay: -1.4s;
+    transform: translate3d(73vw, 1vh, 93px);
+    background: #d9266e;
+}
+@keyframes particle-animation-8 {
+    100% {
+        transform: translate3d(67vw, 52vh, 73px);
+   }
+}
+.particle:nth-child(8) {
+    animation: particle-animation-8 60s infinite;
+    opacity: 0.46;
+    height: 10px;
+    width: 10px;
+    animation-delay: -1.6s;
+    transform: translate3d(13vw, 70vh, 99px);
+    background: #3b26d9;
+}
+@keyframes particle-animation-9 {
+    100% {
+        transform: translate3d(23vw, 8vh, 74px);
+   }
+}
+.particle:nth-child(9) {
+    animation: particle-animation-9 60s infinite;
+    opacity: 0.3;
+    height: 7px;
+    width: 7px;
+    animation-delay: -1.8s;
+    transform: translate3d(81vw, 56vh, 98px);
+    background: #9d26d9;
+}
+@keyframes particle-animation-10 {
+    100% {
+        transform: translate3d(22vw, 65vh, 37px);
+   }
+}
+.particle:nth-child(10) {
+    animation: particle-animation-10 60s infinite;
+    opacity: 0.46;
+    height: 6px;
+    width: 6px;
+    animation-delay: -2s;
+    transform: translate3d(63vw, 26vh, 41px);
+    background: #26d9a9;
+}
+@keyframes particle-animation-11 {
+    100% {
+        transform: translate3d(21vw, 44vh, 84px);
+   }
+}
+.particle:nth-child(11) {
+    animation: particle-animation-11 60s infinite;
+    opacity: 0.96;
+    height: 6px;
+    width: 6px;
+    animation-delay: -2.2s;
+    transform: translate3d(53vw, 82vh, 55px);
+    background: #71d926;
+}
+@keyframes particle-animation-12 {
+    100% {
+        transform: translate3d(88vw, 72vh, 82px);
+   }
+}
+.particle:nth-child(12) {
+    animation: particle-animation-12 60s infinite;
+    opacity: 0.36;
+    height: 7px;
+    width: 7px;
+    animation-delay: -2.4s;
+    transform: translate3d(8vw, 38vh, 93px);
+    background: #3b26d9;
+}
+@keyframes particle-animation-13 {
+    100% {
+        transform: translate3d(27vw, 81vh, 75px);
+   }
+}
+.particle:nth-child(13) {
+    animation: particle-animation-13 60s infinite;
+    opacity: 0.86;
+    height: 7px;
+    width: 7px;
+    animation-delay: -2.6s;
+    transform: translate3d(27vw, 55vh, 40px);
+    background: #6bd926;
+}
+@keyframes particle-animation-14 {
+    100% {
+        transform: translate3d(25vw, 3vh, 30px);
+   }
+}
+.particle:nth-child(14) {
+    animation: particle-animation-14 60s infinite;
+    opacity: 0.07;
+    height: 6px;
+    width: 6px;
+    animation-delay: -2.8s;
+    transform: translate3d(32vw, 56vh, 92px);
+    background: #d92644;
+}
+@keyframes particle-animation-15 {
+    100% {
+        transform: translate3d(38vw, 13vh, 28px);
+   }
+}
+.particle:nth-child(15) {
+    animation: particle-animation-15 60s infinite;
+    opacity: 0.18;
+    height: 9px;
+    width: 9px;
+    animation-delay: -3s;
+    transform: translate3d(68vw, 9vh, 63px);
+    background: #d92c26;
+}
+@keyframes particle-animation-16 {
+    100% {
+        transform: translate3d(87vw, 17vh, 20px);
+   }
+}
+.particle:nth-child(16) {
+    animation: particle-animation-16 60s infinite;
+    opacity: 0.72;
+    height: 9px;
+    width: 9px;
+    animation-delay: -3.2s;
+    transform: translate3d(72vw, 32vh, 65px);
+    background: #d92677;
+}
+@keyframes particle-animation-17 {
+    100% {
+        transform: translate3d(57vw, 6vh, 67px);
+   }
+}
+.particle:nth-child(17) {
+    animation: particle-animation-17 60s infinite;
+    opacity: 0.16;
+    height: 10px;
+    width: 10px;
+    animation-delay: -3.4s;
+    transform: translate3d(12vw, 70vh, 43px);
+    background: #d926a3;
+}
+@keyframes particle-animation-18 {
+    100% {
+        transform: translate3d(38vw, 85vh, 69px);
+   }
+}
+.particle:nth-child(18) {
+    animation: particle-animation-18 60s infinite;
+    opacity: 0.68;
+    height: 7px;
+    width: 7px;
+    animation-delay: -3.6s;
+    transform: translate3d(76vw, 76vh, 90px);
+    background: #26d6d9;
+}
+@keyframes particle-animation-19 {
+    100% {
+        transform: translate3d(12vw, 59vh, 6px);
+   }
+}
+.particle:nth-child(19) {
+    animation: particle-animation-19 60s infinite;
+    opacity: 0.9;
+    height: 7px;
+    width: 7px;
+    animation-delay: -3.8s;
+    transform: translate3d(20vw, 27vh, 86px);
+    background: #d926c7;
+}
+@keyframes particle-animation-20 {
+    100% {
+        transform: translate3d(19vw, 65vh, 98px);
+   }
+}
+.particle:nth-child(20) {
+    animation: particle-animation-20 60s infinite;
+    opacity: 0.26;
+    height: 6px;
+    width: 6px;
+    animation-delay: -4s;
+    transform: translate3d(86vw, 86vh, 78px);
+    background: #26d977;
+}
+@keyframes particle-animation-21 {
+    100% {
+        transform: translate3d(32vw, 54vh, 82px);
+   }
+}
+.particle:nth-child(21) {
+    animation: particle-animation-21 60s infinite;
+    opacity: 0.99;
+    height: 6px;
+    width: 6px;
+    animation-delay: -4.2s;
+    transform: translate3d(69vw, 41vh, 20px);
+    background: #acd926;
+}
+@keyframes particle-animation-22 {
+    100% {
+        transform: translate3d(1vw, 83vh, 33px);
+   }
+}
+.particle:nth-child(22) {
+    animation: particle-animation-22 60s infinite;
+    opacity: 0.35;
+    height: 6px;
+    width: 6px;
+    animation-delay: -4.4s;
+    transform: translate3d(55vw, 89vh, 86px);
+    background: #d92688;
+}
+@keyframes particle-animation-23 {
+    100% {
+        transform: translate3d(66vw, 72vh, 95px);
+   }
+}
+.particle:nth-child(23) {
+    animation: particle-animation-23 60s infinite;
+    opacity: 0.08;
+    height: 10px;
+    width: 10px;
+    animation-delay: -4.6s;
+    transform: translate3d(72vw, 20vh, 38px);
+    background: #d9ca26;
+}
+@keyframes particle-animation-24 {
+    100% {
+        transform: translate3d(82vw, 45vh, 32px);
+   }
+}
+.particle:nth-child(24) {
+    animation: particle-animation-24 60s infinite;
+    opacity: 0.82;
+    height: 8px;
+    width: 8px;
+    animation-delay: -4.8s;
+    transform: translate3d(70vw, 16vh, 81px);
+    background: #d95026;
+}
+@keyframes particle-animation-25 {
+    100% {
+        transform: translate3d(19vw, 35vh, 99px);
+   }
+}
+.particle:nth-child(25) {
+    animation: particle-animation-25 60s infinite;
+    opacity: 0.39;
+    height: 10px;
+    width: 10px;
+    animation-delay: -5s;
+    transform: translate3d(39vw, 10vh, 41px);
+    background: #d9263b;
+}
+@keyframes particle-animation-26 {
+    100% {
+        transform: translate3d(89vw, 67vh, 58px);
+   }
+}
+.particle:nth-child(26) {
+    animation: particle-animation-26 60s infinite;
+    opacity: 0.59;
+    height: 9px;
+    width: 9px;
+    animation-delay: -5.2s;
+    transform: translate3d(44vw, 72vh, 61px);
+    background: #26a6d9;
+}
+@keyframes particle-animation-27 {
+    100% {
+        transform: translate3d(61vw, 39vh, 53px);
+   }
+}
+.particle:nth-child(27) {
+    animation: particle-animation-27 60s infinite;
+    opacity: 0.69;
+    height: 8px;
+    width: 8px;
+    animation-delay: -5.4s;
+    transform: translate3d(15vw, 82vh, 44px);
+    background: #9426d9;
+}
+@keyframes particle-animation-28 {
+    100% {
+        transform: translate3d(2vw, 20vh, 65px);
+   }
+}
+.particle:nth-child(28) {
+    animation: particle-animation-28 60s infinite;
+    opacity: 0.78;
+    height: 8px;
+    width: 8px;
+    animation-delay: -5.6s;
+    transform: translate3d(7vw, 86vh, 33px);
+    background: #26d929;
+}
+@keyframes particle-animation-29 {
+    100% {
+        transform: translate3d(1vw, 1vh, 88px);
+   }
+}
+.particle:nth-child(29) {
+    animation: particle-animation-29 60s infinite;
+    opacity: 0.13;
+    height: 7px;
+    width: 7px;
+    animation-delay: -5.8s;
+    transform: translate3d(86vw, 55vh, 62px);
+    background: #d926d9;
+}
+@keyframes particle-animation-30 {
+    100% {
+        transform: translate3d(72vw, 4vh, 26px);
+   }
+}
+.particle:nth-child(30) {
+    animation: particle-animation-30 60s infinite;
+    opacity: 0.96;
+    height: 8px;
+    width: 8px;
+    animation-delay: -6s;
+    transform: translate3d(36vw, 34vh, 91px);
+    background: #d99126;
+}
 
 
 
