--- a/style.css
+++ b/style.css
@@ -148,20 +148,20 @@ nav ul li a:hover, nav ul li a:active {
     min-height: 55em;
 }
 .lorem {
-    background: #696969;
-    background-image: linear-gradient(to bottom right,#696969,#C0C0C0);
+    background:#F0F8FF;
+    background-image: linear-gradient(to bottom right,#FAEBD7,#F0F8FF);
 }
 .ipsum {
-    background: #696969;
-    background-image: linear-gradient(to bottom right,#696969,#C0C0C0);
+    background:#F0F8FF;
+    background-image: linear-gradient(to bottom right,#FAEBD7,#F0F8FF);
 }
 .dolor {
-    background: #696969;
-    background-image: linear-gradient(to bottom right,#696969,#C0C0C0);
+    background:#F0F8FF;
+    background-image: linear-gradient(to bottom right,#FAEBD7,#F0F8FF);
 }
 .amet {
-    background: #696969;
-    background-image: linear-gradient(to bottom right,#696969,#C0C0C0);
+    background:#F0F8FF;
+    background-image: linear-gradient(to bottom right,#FAEBD7,#F0F8FF);
 }
 /* Helper class */
 .small {
@@ -205,8 +205,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(1) {
     animation: particle-animation-1 60s infinite;
     opacity: 0.49;
-    height: 6px;
-    width: 6px;
+    height: 20px;
+    width: 20px;
     animation-delay: -0.2s;
     transform: translate3d(23vw, 90vh, 25px);
     background: #50d926;
@@ -219,8 +219,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(2) {
     animation: particle-animation-2 60s infinite;
     opacity: 0.81;
-    height: 6px;
-    width: 6px;
+    height: 30px;
+    width: 30px;
     animation-delay: -0.4s;
     transform: translate3d(31vw, 81vh, 19px);
     background: #263ed9;
@@ -233,8 +233,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(3) {
     animation: particle-animation-3 60s infinite;
     opacity: 0.71;
-    height: 8px;
-    width: 8px;
+    height: 40px;
+    width: 40px;
     animation-delay: -0.6s;
     transform: translate3d(66vw, 25vh, 26px);
     background: #26d965;
@@ -247,8 +247,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(4) {
     animation: particle-animation-4 60s infinite;
     opacity: 0.89;
-    height: 6px;
-    width: 6px;
+    height: 12px;
+    width: 12px;
     animation-delay: -0.8s;
     transform: translate3d(44vw, 50vh, 3px);
     background: #269ad9;
@@ -261,8 +261,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(5) {
     animation: particle-animation-5 60s infinite;
     opacity: 0.53;
-    height: 6px;
-    width: 6px;
+    height: 25px;
+    width: 25px;
     animation-delay: -1s;
     transform: translate3d(30vw, 50vh, 39px);
     background: #56d926;
@@ -275,8 +275,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(6) {
     animation: particle-animation-6 60s infinite;
     opacity: 0.41;
-    height: 8px;
-    width: 8px;
+    height: 18px;
+    width: 18px;
     animation-delay: -1.2s;
     transform: translate3d(12vw, 48vh, 83px);
     background: #26d94a;
@@ -289,8 +289,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(7) {
     animation: particle-animation-7 60s infinite;
     opacity: 0.79;
-    height: 9px;
-    width: 9px;
+    height: 19px;
+    width: 19px;
     animation-delay: -1.4s;
     transform: translate3d(73vw, 1vh, 93px);
     background: #d9266e;
@@ -317,8 +317,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(9) {
     animation: particle-animation-9 60s infinite;
     opacity: 0.3;
-    height: 7px;
-    width: 7px;
+    height: 17px;
+    width: 17px;
     animation-delay: -1.8s;
     transform: translate3d(81vw, 56vh, 98px);
     background: #9d26d9;
@@ -331,8 +331,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(10) {
     animation: particle-animation-10 60s infinite;
     opacity: 0.46;
-    height: 6px;
-    width: 6px;
+    height: 16px;
+    width: 16px;
     animation-delay: -2s;
     transform: translate3d(63vw, 26vh, 41px);
     background: #26d9a9;
@@ -345,8 +345,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(11) {
     animation: particle-animation-11 60s infinite;
     opacity: 0.96;
-    height: 6px;
-    width: 6px;
+    height: 16px;
+    width: 16px;
     animation-delay: -2.2s;
     transform: translate3d(53vw, 82vh, 55px);
     background: #71d926;
@@ -359,8 +359,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(12) {
     animation: particle-animation-12 60s infinite;
     opacity: 0.36;
-    height: 7px;
-    width: 7px;
+    height: 17px;
+    width: 17px;
     animation-delay: -2.4s;
     transform: translate3d(8vw, 38vh, 93px);
     background: #3b26d9;
@@ -373,8 +373,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(13) {
     animation: particle-animation-13 60s infinite;
     opacity: 0.86;
-    height: 7px;
-    width: 7px;
+    height: 17px;
+    width: 17px;
     animation-delay: -2.6s;
     transform: translate3d(27vw, 55vh, 40px);
     background: #6bd926;
@@ -387,8 +387,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(14) {
     animation: particle-animation-14 60s infinite;
     opacity: 0.07;
-    height: 6px;
-    width: 6px;
+    height: 16px;
+    width: 16px;
     animation-delay: -2.8s;
     transform: translate3d(32vw, 56vh, 92px);
     background: #d92644;
@@ -401,8 +401,8 @@ nav ul li a:hover, nav ul li a:active {
 .particle:nth-child(15) {
     animation: particle-animation-15 60s infinite;
     opacity: 0.18;
-    height: 9px;
-    width: 9px;
+    height: 19px;
+    width: 19px;
     animation-delay: -3s;
     transform: translate3d(68vw, 9vh, 63px);
     background: #d92c26;
@@ -617,6 +617,7 @@ nav ul li a:hover, nav ul li a:active {
     transform: translate3d(36vw, 34vh, 91px);
     background: #d99126;
 }
+
 
 
 
