--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ h1 {
     1px 25px 35px rgba(16,16,16,0.2),
     1px 30px 60px rgba(16,16,16,0.4);
 }
+#zuko{
+    font-size: 22px;
+    font-family: 'Lobster', helvetica, arial;
+    font-style:italic;
+    font-weight: bold;
+    text-align: center;
+}
     
 #aboutme {
     color: black; 
